add_subdirectory(examples/CefBrowser)
add_subdirectory(examples/ColorPicker)
add_subdirectory(examples/DpiAware)
add_subdirectory(examples/ListBox)
add_subdirectory(examples/ListCtrl)
add_subdirectory(examples/MoveControl)
add_subdirectory(examples/MultiLang)
add_subdirectory(examples/MyDuilibApp)
add_subdirectory(examples/RichEdit)
add_subdirectory(examples/TreeView)
add_subdirectory(examples/VirtualListBox)
add_subdirectory(examples/WebView2)
add_subdirectory(examples/WebView2Browser)
add_subdirectory(examples/basic)
add_subdirectory(examples/cef)
add_subdirectory(examples/controls)
add_subdirectory(examples/layouts)
add_subdirectory(examples/render)
add_subdirectory(examples/threads)