add_subdirectory(CefBrowser)
add_subdirectory(ColorPicker)
add_subdirectory(DpiAware)
add_subdirectory(ListBox)
add_subdirectory(ListCtrl)
add_subdirectory(MoveControl)
add_subdirectory(MultiLang)
add_subdirectory(MyDuilibApp)
add_subdirectory(RichEdit)
add_subdirectory(TreeView)
add_subdirectory(VirtualListBox)
add_subdirectory(WebView2)
add_subdirectory(WebView2Browser)
add_subdirectory(basic)
add_subdirectory(cef)
add_subdirectory(controls)
add_subdirectory(layouts)
add_subdirectory(render)
add_subdirectory(threads)